Mise à jour des templates

--- a/templates/Administrateur/accueil.html
+++ b/templates/Administrateur/accueil.html
@@ -6,54 +6,58 @@
     {% block title %}
         <title>Accueil</title>
     {% endblock %}
+    <style>
+        .bg-light {
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+        }
+    </style>
 </head>
 
-<body>
-{% if accreditation == 1 %}
-    {% include('navbar_1.html') %}
-    <p>1</p>
-{% elif accreditation == 2 %}
-    {% include('navbar_2.html') %}
-    <p>2</p>
-{% elif accreditation == 3 %}
-    {% include('navbar_3.html') %}
-    <p>3</p>
-{% else %}
-    {% include('navbar_4.html') %}
-    <p>4</p>
-{% endif %}
-{% block body %}
-<div class="album py-5">
-    <div class="container">
-        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+<body class="text-center bg-light" style="background-image: url('/static/images/{{image_accueil.libelle_image_accueil}}');   ">
+{% include('Administrateur/navbar.html') %}
 
-            {% for ligne in info_album %}
-                <div class="col">
-                    <div class="card shadow-sm">
-                        {% for lien in image_album %}
-                            {% if lien.id_image == ligne.id_image_album %}
-                        <img src="../static/images/accueil/carousel/{{ lien.lien_image }}" alt="...">
-                        <div class="card-body">
-                            <p class="card-text"> {{ ligne.description_album }} </p>
-                            {% endif %}
-                        {% endfor %}
-                            <div class="d-flex justify-content-between align-items-center">
-                                <div class="btn-group">
-                                    <p><a class="btn btn-sm btn-primary" href="#">Regarder</a></p>
+{% block body %}
+
+<div class="text-center">
+    {% for ligne in texte_accueil %}
+        <p class="text-light bg-dark" style="position: center; margin-left: 25%; margin-right: 25%;">{{ligne.texte_accueil|safe}}</p>
+    {% endfor %}
+
+    <br><br>
+
+    <div class="album py-5">
+        <div class="container">
+            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 g-4">
+
+                {% for ligne in albums_accueil %}
+                    <div class="col">
+                        <div class="card shadow-sm">
+                            <img src="/static/images/{{ligne.libelle_image_garde}}" alt="{{ligne.libelle_image_garde}}">
+                            <div class="card-body">
+                                <p class="card-text"> {{ ligne.description_album }} </p>
+                                <div class="d-flex justify-content-between align-items-center">
+                                    <div class="btn-group">
+                                        <form class="" action="/admin/albums/show" >
+                                            <input name="id_album" type="hidden" class="form-control rounded-3" id="id_album" value="{{ ligne.id_album }}">
+                                            <button class="btn btn-sm btn-primary" type="submit">Regarder</button>
+                                        </form>
+                                    </div>
+                                    <small class="text-muted"> {{ ligne.date_album }} </small>
                                 </div>
-                                <small class="text-muted"> {{ ligne.date_album }} </small>
                             </div>
                         </div>
                     </div>
-                </div>
-            {% endfor %}
+                {% endfor %}
 
+            </div>
         </div>
     </div>
-</div>
-{% endblock %}
 
-{% include('footer.html') %}
+</div>
+
+{% endblock %}
 
 {% block javascripts %}
     <script src="{{ url_for('static', filename='js/bootstrap.js') }}"></script>
