--- a/templates/Administrateur/album.html
+++ b/templates/Administrateur/album.html
@@ -9,19 +9,35 @@
 </head>
 
 <body>
-{% include('Tout_le_monde/navbar.html') %}
+{% include('Administrateur/navbar.html') %}
 {% block body %}
+
+{% for ligne in infos_albums %}
+<div class="d-flex">
+    <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light flex-grow-1" style="background-image: url('/static/images/{{ligne.libelle_image_garde}}'); background-size: cover; background-position: center;">
+        <div class="product-device shadow-sm d-none d-md-block"></div>
+        <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
+    </div>
+    <div class="col-md-5 p-lg-5 mx-auto my-5">
+        <h1 class="display-4 fw-normal">{{ ligne.libelle_album }}</h1>
+        <p class="lead fw-normal">{{ ligne.description_album }}</p>
+        <p class="lead fw-normal">{{ ligne.texte_article }}</p>
+        <p class="small">Date : {{ ligne.date_album }}</p>
+    </div>
+</div>
+{% endfor %}
+
 <div class="album py-5">
     <div class="container">
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
 
-            {% for ligne in info_medias %}
+            {% for ligne in infos_medias %}
                 <div class="col">
                     <div class="card shadow-sm">
-                        {% if ligne.id_type_medias == image['id_type_medias'] %}
+                        {% if ligne.id_type_medias == 1 %}
                             <img src="/static/images/{{ligne.lien_medias}}" alt="{{ligne.libelle_medias}}">
                         {% endif %}
-                        {% if ligne.id_type_medias == video['id_type_medias'] %}
+                        {% if ligne.id_type_medias == 2 %}
                             <video controls>
                                 <source src="/static/videos/{{ligne.lien_medias}}" type="video/webm">
                                 <source src="/static/videos/{{ligne.lien_medias}}" type="video/mp4">
@@ -32,8 +48,8 @@
                                 video.
                             </video>
                         {% endif %}
-                        {% if ligne.id_type_medias == audio['id_type_medias'] %}
-                            <audio controls src="/static/audios/audio.mp3"> <a href="/static/audios/audio.mp3"> Download audio </a> </audio>
+                        {% if ligne.id_type_medias == 3 %}
+                            <audio controls src="/static/audios/{{ligne.lien_medias}}"> <a href="/static/audios/{{ligne.lien_medias}}"> Download audio </a> </audio>
                         {% endif %}
                         <div class="card-body">
                             <p class="card-text"> {{ ligne.libelle_medias }} </p>
