--- a/templates/Administrateur/creer_compte.html
+++ b/templates/Administrateur/creer_compte.html
@@ -5,50 +5,52 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     {% block title %}
-        <title>Accueil</title>
+        <title>Création de compte</title>
     {% endblock %}
 </head>
 
 <body>
-{% if accreditation == 1 %}
-    {% include('navbar_1.html') %}
-{% endif %}
-{% if accreditation == 2 %}
-    {% include('navbar_2.html') %}
-{% endif %}
-{% if accreditation == 3%}
-    {% include('navbar_3.html') %}
-{% else %}
-    {% include('navbar_4.html') %}
-{% endif %}
+
+{% include('Administrateur/navbar.html') %}
 
 {% block body %}
-<div class="modal modal-sheet position-static d-block py-5" tabindex="-1" role="dialog" id="modalSheet">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content rounded-4 shadow">
-          <div class="modal-header border-bottom-0">
-            <h1 class="modal-title fs-5">Crée un compte</h1>
-          </div>
-          <div class="modal-body py-0">
-            <p>Pour vous crée un compte, envoyer les information suivantes à l'adresse <u>mandiole.services@gmail.com</u>.
-              <br><br>
-                Pseudo<br>
-                Mots de passe<br>
-                Nom<br>
-                Prénom<br><br>
-
-                <small>Caractères et suites de caractères interdits : =%s    ,    '    ;</small>
-            </p>
-          </div>
-          <div class="modal-footer flex-column border-top-0">
-            <a href="/accueil"><button type="button" class="btn btn-lg btn-primary w-100 mx-0 mb-2">Retour</button></a>
-          </div>
+    <div class="modal modal-signin position-static d-block py-5" tabindex="-1" role="dialog" id="modalSignin">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content rounded-4 shadow">
+                <div class="modal-header p-5 pb-4 border-bottom-0">
+                    <h1 class="fw-bold mb-0 fs-2">Crée un compte</h1>
+                    </div>
+                    <div class="modal-body p-5 pt-0">
+                    <form class="" method="POST" action="/signup" >
+                        <div class="form-floating mb-3">
+                            <input name="login" type="text" class="form-control rounded-3" id="login" placeholder="Pseudo" required>
+                            <label for="login">Pseudo</label>
+                        </div>
+                        <div class="form-floating mb-3">
+                            <input name="password" type="text" class="form-control rounded-3" id="password" placeholder="Mots de passe" required>
+                            <label for="password">Mots de passe</label>
+                        </div>
+                        <div class="form-floating mb-3">
+                            <input name="prenom" type="text" class="form-control rounded-3" id="prenom" placeholder="Prénom" required>
+                            <label for="prenom">Prénom</label>
+                        </div>
+                        <div class="form-floating mb-3">
+                            <input name="nom" type="text" class="form-control rounded-3" id="nom" placeholder="Nom" required>
+                            <label for="nom">Nom</label>
+                        </div>
+                        <div class="form-floating mb-3">
+                            <input name="mail" type="text" class="form-control rounded-3" id="mail" placeholder="Adresse mail" required>
+                            <label for="mail">Mail</label>
+                        </div>
+                        <button class="w-100 mb-2 btn btn-lg rounded-3 btn-primary" type="submit">Crée un compte</button>
+                        <hr class="my-4">
+                        <a href="/login"><button type="button" class="btn btn-lg btn-primary w-100 mx-0 mb-2">Retour</button></a>
+                    </form>
+                </div>
+            </div>
         </div>
-      </div>
     </div>
 {% endblock %}
-
-{% include('footer.html') %}
 
 {% block javascripts %}
     <script src="{{ url_for('static', filename='js/bootstrap.js') }}"></script>
