--- a/templates/Administrateur/medias.html
+++ b/templates/Administrateur/medias.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-{% include('Tout_le_monde/navbar.html') %}
+{% include('Administrateur/navbar.html') %}
 {% block body %}
 
 <div class="container">
