--- a/templates/Administrateur/navbar.html
+++ b/templates/Administrateur/navbar.html
@@ -3,48 +3,41 @@
 {% endblock %}
 
 {% block stylesheets %}
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <link href="../static/index.css" rel="stylesheet" type="text/css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 {% endblock %}
 
 <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
     <div class="container-fluid">
-        <a class="navbar-brand" href="/accueil?accreditation=1">Mandiole</a>
+        <a class="navbar-brand" href="/admin/accueil/show">Mandiole</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
-        <ul class="navbar-nav me-auto mb-2 mb-md-0">
-            <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/accueil?accreditation=1">Accueil</a> <!--Lien position-->
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="page1.html">Page 1</a> <!--Lien pas de position-->
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/accueil/creation?accreditation=1">Menus admin</a>
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Lien 3
-                </a> <!--Lien dropdown-->
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    <li><a class="dropdown-item" href="#">Lien 3.1</a></li>
-                    <li><a class="dropdown-item" href="#">Lien 3.2</a></li>
-                    <li><a class="dropdown-item" href="#">Lien 3.3</a></li>
-                </ul>
-            </li>
-        </ul>
+            <ul class="navbar-nav me-auto mb-2 mb-md-0">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="/admin/accueil/show">Accueil</a> <!--Lien position-->
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/admin/liste/album/show">Albums</a> <!--Lien pas de position-->
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/admin/liste/medias/show">Médias</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/admin/a_propos">A propos de nous</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/admin/edition/show">Edition</a>
+                </li>
+            </ul>
         </div>
-    <a href="/accueil/connection_compte">
-        <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
-            <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"></path>
-            <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"></path>
-        </svg>
-    </a>
     </div>
+    <a class="btn btn-light text-dark me-2" href="/login">Connexion</a>
+    <a class="btn btn-primary me-2" href="/logout">Déconnexion</a>
+    <a class="btn btn-light me-2" href="/admin/info_user/show"><img src="/static/images/photos_de_profil/None.png" style="height: 20px;"></a>
 </nav>
-<hr><hr><hr>
+<br><br><br><br>
 {% with messages = get_flashed_messages(with_categories=true) %}
     {% if messages %}
         {% for categorie, message in messages %}
