--- a/templates/Tout_le_monde/navbar.html
+++ b/templates/Tout_le_monde/navbar.html
@@ -30,7 +30,7 @@
             </ul>
         </div>
     </div>
-    <a class="btn btn-light text-dark me-2" href="/login">Connection</a>
+    <a class="btn btn-light text-dark me-2" href="/login">Connexion</a>
     <a class="btn btn-primary me-2" href="/logout">Déconnexion</a>
     <a class="btn btn-light me-2" href="/autres/info_user/show"><img src="/static/images/photos_de_profil/None.png" style="height: 20px;"></a>
 </nav>
